# samantha-os

./: .gitignore  README.md  elementary-claw-parity-plan.md  elementary-claw-plan.md  go.mod  go.sum  initial-setup-vm-runbook.md  installer-ai-onboarding.md  panel-claw-plan.md  panel-sam-plan.md
.github/instructions/: copilot-instructions.md
cmd/claw/: main.go
deployments/systemd/: elementary-claw.service
docs/: chatgpt_auth_resolution.md  openclaw-parity-matrix.md
internal/app/: app.go  app_test.go
internal/bootstrap/: bootstrap.go  bootstrap_test.go
internal/config/: config_test.go  paths.go  setup.go
internal/cron/: helpers.go  service.go  storage.go  storage_sqlite.go  types.go
internal/mcp/: adapter.go  adapter_test.go  auth.go  client.go  loader.go  token.go
internal/memory/: memory.go  memory_live_test.go  memory_test.go
internal/prompt/: budget.go  helpers_test.go  prompt.go  prompt_live_test.go  prompt_test.go  safety.go
internal/runtime/: cron_handler.go  enriched_live_test.go  http_handler.go  http_handler_test.go  live_test.go  openaicodex_handler.go  provider.go  provider_errors.go  (+4 more)
landing-page/: .gitignore  index.html  package-lock.json  package.json
panel-sam/: meson.build
panel-sam/data/styles/: sam.css
panel-sam/src/: Config.vala.in  Indicator.vala
panel-sam/src/Services/: GatewayClient.vala
panel-sam/voice-bridge/: README.md  bridge.py  requirements.txt
vm/: 2026-04-03-field-notes.md  download-elementary-iso.sh  macos-utm-runbook.md  package-vm-bundle.sh  provision-elementary-vm.sh  test-cron.sh  test-tools-e2e.sh
(+112 files in other folders)
